--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,3 +1,4 @@
-openjdk-1.8.0_141.tar.gz:
-  size: 45927906
-  sha: fef57709d2ca0b375a3879fe03df303afe24307f
+jdk-9.0.1+11.tar.gz:
+  size: 38568920
+  object_id: f80c2d5b-a282-4e85-5e1f-493cfd44e6e2
+  sha: b509f60db9b831e3dd7e37ca2d242a1de279b284
